--- a/v1/client/src/scss/_values.scss
+++ b/v1/client/src/scss/_values.scss
@@ -1,7 +1,7 @@
-$orange: #FF5D48;
-$orangehover: #FF6D58;
-$dg: #141415;
-$db: #131b23;
+$orange: #FB3640;
+$orangehover: #ff4650;
+$dg: #141414;
+$db: #141414;
 $lg: #DFE4EA;
-$gray: #505050;
+$gray: #141414;
 $ow: #f3f3f3;
