--- a/v1/client/src/scss/_footer.scss
+++ b/v1/client/src/scss/_footer.scss
@@ -3,7 +3,7 @@ footer {
     padding-left: 10%;
     padding-right: 10%;
     box-sizing: content-box;
-    background-color: white;
+    background-color: #eaeaea;
     margin-top: 150px;
     padding-top: 50px;
     padding-bottom: 72px;
@@ -44,7 +44,7 @@ footer {
                         left: 50%;
                         bottom: -2px;
                         width: 0px;
-                        height: 1px;
+                        height: 1.5px;
                         transition: all 0.15s ease;
                         background-color: $gray;
                     }
@@ -68,8 +68,8 @@ footer {
             
             a {
                 svg {
-                    height: 32px;
-                    width: 32px;
+                    height: 28px;
+                    width: 28px;
                     fill: $gray;
 
                     &:hover {
@@ -90,9 +90,24 @@ footer {
     }
 
     h4 {
-        color: $gray;
-        font-weight: 600;
+        color: #a0a0a0;
+        font-weight: 400;
         text-align: center;
         margin-top: 40px;
+        font-size: 14px;
     }
+}
+
+@media screen
+and (min-width: 768px)
+and (max-width: 991px) {
+}
+
+@media screen
+and (min-width: 478px)
+and (max-width: 767px) {
+}
+
+@media screen
+and (max-width: 480px) {
 }
