--- a/v1/client/src/scss/_general.scss
+++ b/v1/client/src/scss/_general.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: #f7f7f7;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 0px;
