--- a/v1/client/src/scss/_header.scss
+++ b/v1/client/src/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: #fffffffa;
+    background-color: #f7f7f7fa;
     height: 80px;
     width: calc(100vw - 50px);
     margin-top: 15px;
@@ -23,7 +23,7 @@ header {
     }
 
     .logo {
-        height: 30px;
+        height: 35px;
         margin-left: 0px;
     }
 
@@ -43,7 +43,7 @@ header {
                     text-decoration: none;
                     font-size: 16;
                     top: 2px;
-                    letter-spacing: -0.4px;
+                    letter-spacing: -0px;
                     transition: all 0.15s ease;
 
                     &:after {
@@ -106,7 +106,7 @@ header {
     }
 
     .logo {
-        height: 30px;
+        height: 35px;
         margin-left: 0px;
     }
 
@@ -125,7 +125,7 @@ header {
                     text-decoration: none;
                     font-size: 16;
                     top: 2px;
-                    letter-spacing: -0.4px;
+                    letter-spacing: -0.2px;
                     transition: all 0.15s ease;
 
                     &:after {
@@ -189,7 +189,7 @@ header {
     }
 
     .logo {
-        height: 30px;
+        height: 35px;
         margin-left: 0px;
     }
 
@@ -208,7 +208,7 @@ header {
                     text-decoration: none;
                     font-size: 16;
                     top: 2px;
-                    letter-spacing: -0.4px;
+                    letter-spacing: -0.2px;
                     transition: all 0.15s ease;
 
                     &:after {
@@ -252,4 +252,23 @@ header {
             }
         }
     }
+}
+
+@media screen
+and (min-width: 768px)
+and (max-width: 991px) {
+    header {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media screen
+and (min-width: 478px)
+and (max-width: 767px) {
+    
+}
+
+@media screen
+and (max-width: 480px) {
 }
