--- a/v1/client/src/scss/aplicaciones-web.module.scss
+++ b/v1/client/src/scss/aplicaciones-web.module.scss
@@ -15,23 +15,30 @@
         align-items: center;
         margin-top: 70px;
 
+        .bannerimg {
+            img {
+                width: 500px;
+            }
+        }
+
         .bannertext {
 
             h5 {
                 color: $orange;
                 font-weight: 600;
-                letter-spacing: -0.7px;
+                letter-spacing: -0.2px;
                 font-size: 16px;
             }
 
             h2 {
                 font-weight: 400;
                 font-size: 40px;
-                letter-spacing: -2px;
+                letter-spacing: -1.2px;
                 margin-top: 5px;
 
                 strong {
                     font-weight: 600;
+                    letter-spacing: -1px;
                 }
             }
 
@@ -94,7 +101,7 @@
 
             p {
                 font-size: 18px;
-                letter-spacing: -1px;
+                letter-spacing: -0.5px;
                 line-height: 26px;
                 margin-top: 10px;
             }
@@ -109,7 +116,7 @@
                     color: white;
                     font-size: 17px;
                     line-height: 28px;
-                    letter-spacing: -0.5px;
+                    letter-spacing: -0.2px;
                     padding: 15px 35px 13px 35px;
                     border-radius: 8px;
                     text-decoration: none;
@@ -138,4 +145,118 @@
             }
         }
     }
+}
+
+.content {
+    .alternado {
+        width: 80%;
+        display: flex;
+        align-items: center;
+        margin-top: 120px;
+
+        .altimg {
+            height: 400px;
+        }
+
+        .alttext {
+            width: 450px;
+
+            h5 {
+                font-size: 16px;
+                letter-spacing: -0.3px;
+                font-weight: 600;
+                color: $orange;
+            }
+
+            h3 {
+                font-size: 36px;
+                line-height: 44px;
+                letter-spacing: -1.5px;
+                font-weight: 400;
+                margin-top: 5px;
+
+                strong {
+                    letter-spacing: -1px;
+                }
+            }
+
+            p {
+                color: $gray;
+                margin-top: 10px;
+                font-size: 16px;
+                letter-spacing: -0.3px;
+                line-height: 23px;
+            }
+        }
+    }
+
+    .alt1 {
+        flex-direction: row-reverse;
+    }
+
+    .idea {
+        width: 80%;
+        background-color: $orange;
+        border-radius: 20px;
+        margin-top: 120px;
+        padding: 70px 60px 70px 60px;
+        box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.2);
+
+        img {
+            height: 80px;
+        }
+
+        h3 {
+            color: white;
+            font-size: 36px;
+            letter-spacing: -1.5px;
+            font-weight: 600;
+            margin-top: 50px;
+            text-align: center;
+
+            strong {
+                letter-spacing: -1px;
+            }
+        }
+
+        p {
+            color: white;
+            margin-top: 20px;
+            font-size: 30px;
+            letter-spacing: -1px;
+            line-height: 30px;
+            text-align: center;
+            font-weight: 500;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 30px;
+            font-weight: 300;
+            letter-spacing: -0.5px;
+            margin-top: 40px;
+            display: block;
+            text-align: center;
+            text-decoration: underline;
+
+            &:hover {
+                color: #ddd;
+            }
+        }
+    }
+}
+
+@media screen
+and (min-width: 768px)
+and (max-width: 991px) {
+}
+
+@media screen
+and (min-width: 478px)
+and (max-width: 767px) {
+}
+
+@media screen
+and (max-width: 480px) {
 }
