--- a/v1/client/src/scss/sitios-web.module.scss
+++ b/v1/client/src/scss/sitios-web.module.scss
@@ -37,7 +37,7 @@
             form {
                 display: flex;
                 justify-content: flex-start;
-                margin-top: 10px;
+                margin-top: 15px;
 
                 * {
                     margin-left: 0px;
@@ -95,7 +95,13 @@
                 font-size: 18px;
                 letter-spacing: -1px;
                 line-height: 26px;
-                margin-top: 20px;
+                margin-top: 35px;
+            }
+        }
+
+        .bannerimg {
+            img {
+                width: 600px;
             }
         }
     }
@@ -108,7 +114,7 @@
         h1 {
             font-size: 45px;
             font-weight: 400;
-            letter-spacing: -2px;
+            letter-spacing: -1px;
             text-align: center;
             color: $dg;
         }
@@ -122,6 +128,10 @@
             line-height: 26px;
             color: $gray;
         }
+
+        strong {
+            color: $orange;
+        }
     }
 
     .alternado {
@@ -129,6 +139,10 @@
         display: flex;
         align-items: center;
         margin-top: 80px;
+
+        .altimg {
+            width: 400px;
+        }
 
         .alttext {
             width: 450px;
@@ -164,9 +178,9 @@
 
     .fourdivide {
         background-color: $ow;
-        padding-top: 65px;
+        padding-top: 90px;
         margin-top: 100px;
-        padding-bottom: 70px;
+        padding-bottom: 90px;
 
         h1 {
             text-align: center;
@@ -186,7 +200,7 @@
         }
 
         img {
-            margin-top: 50px;
+            margin-top: 75px;
             width: 75%;
         }
 
@@ -322,9 +336,9 @@
                     }
 
                     h2 {
-                        font-size: 56px;
+                        font-size: 42px;
                         line-height: 62px;
-                        letter-spacing: -2.4px;
+                        letter-spacing: -1.5px;
                     }
 
                     h6 {
@@ -389,4 +403,18 @@
             }
         }
     }
+}
+
+@media screen
+and (min-width: 768px)
+and (max-width: 991px) {
+}
+
+@media screen
+and (min-width: 478px)
+and (max-width: 767px) {
+}
+
+@media screen
+and (max-width: 480px) {
 }
